--- a/views/dosen/course_plan.ejs
+++ b/views/dosen/course_plan.ejs
@@ -90,7 +90,7 @@
 
                         <tr>
                             <td rowspan="8">Capaian Pembelajaran (CP) </td>
-                            <td colspan="3">CP Program Studi </td> 
+                            <td colspan="7" class="grey">CP Program Studi </td> 
                         </tr>
                         <tr>
                             <td>CP-1 </td> 
@@ -105,7 +105,7 @@
                             <td colspan="6">Menerapkan konsep </td> 
                         </tr>
                         <tr>  
-                            <td colspan="3">CP Mata Kuliah </td> 
+                            <td colspan="7" class="grey">CP Mata Kuliah </td> 
                         </tr>
                        
 
@@ -144,8 +144,8 @@
 
                         <tr>
                             <td rowspan="8">Media Pembelajaran </td>
-                            <td colspan="3">Perangkat Lunak: </td> 
-                            <td colspan="4">Perangkat Keras: </td> 
+                            <td colspan="3" class="grey">Perangkat Lunak: </td> 
+                            <td colspan="4" class="grey">Perangkat Keras: </td> 
                         </tr>
                         <tr> 
                             <td colspan="3">Power point </td> 
