--- a/views/dosen/courses.ejs
+++ b/views/dosen/courses.ejs
@@ -7,7 +7,6 @@
           <h1 class="navbar-brand head mb-3">Rencana Pembelajaran Semester (RPS)</h1>
           <div>
             <a href="/dosen/add-course" class="button100-form-btn btn-head">Tambah RPS</a>
-            <a href="" target="_blank" class="button100-form-btn btn-head">Revisi RPS</a>
           </div>
         </span>
       </div>
@@ -15,21 +14,28 @@
     <div class="row all-card">
       <% items.forEach((item) => { %>
       <div class="col-md-3 mb-3">
-        <div class="card text-center h-100">
-          <div class="card-body">
-            <img src="/images/frame.png" class="card-img-top" alt="..." />
-            <h4 class="card-title"><%= item.name %></h4>
-            <h6 class="card-subtitle text-muted flexible">Semester <%= item.semester %></h6>
-            <div class="mt-2">
-              <a href="/dosen/coursesPlan/<%= item.id %>" class="card-link">LIHAT</a>
-              <a href="#" class="card-link">DETAIL</a>  
+        <a href="/dosen/coursesPlan/<%= item.id %>">
+          <div class="card text-center h-100">
+            <div class="card-body" onclick="page()">
+              <img src="/images/frame.png" class="card-img-top" alt="..." />
+              <h4 class="card-title flexible"><%= item.name %></h4>
+              <h6 class="card-subtitle text-muted mt-2">Semester <%= item.semester %></h6>
+
             </div>
-          </div>
-        </div>
+          </div>  
+        </a>
       </div>
       <% }) %>
     </div>
   </div>
 
-  <%- include('../partials/footer'); -%>
 </div>
+<% items.forEach((item) => { %>
+<script>
+    function page() {
+    window.location.href = "/dosen/coursesPlan/<%= item.id %>";
+  }
+</script>
+
+<% }) %>
+<%- include('../partials/footer'); -%>
