--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,12 +5,12 @@
     <div class="wrap-login100">
       <img src="images/logounand.png" alt="logo unand" class="login100-form-title" />
 
-      <form class="login100-form validate-form flex-sb flex-w" action="auth/login" method="post"> 
+      <form class="login100-form validate-form flex-sb flex-w" action="auth/login" method="post">
         <div class="p-t-31">
           <h4 class="txt1">Email</h4>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Username is required">
-          <input class="input100" type="text" name="email"/>
+          <input class="input100" type="text" name="email" />
           <span class="focus-input100"></span>
           <div class="email error"></div>
         </div>
@@ -18,7 +18,7 @@
           <h4 class="txt1">Password</h4>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Password is required">
-          <input class="input100" type="password" name="password"/>
+          <input class="input100" type="password" name="password" />
           <span class="focus-input100"></span>
           <div class="password error"></div>
         </div>
@@ -34,27 +34,27 @@
 <%- include('partials/footer'); -%>
 
 <script>
-  const form = document.querySelector('form');
-  const emailError = document.querySelector('.email.error');
-  const passwordError = document.querySelector('.password.error');
+  const form = document.querySelector("form");
+  const emailError = document.querySelector(".email.error");
+  const passwordError = document.querySelector(".password.error");
 
-  form.addEventListener('submit', async (e) => {
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
 
     // reset errors
-    emailError.textContent = '';
-    passwordError.textContent = '';
+    emailError.textContent = "";
+    passwordError.textContent = "";
 
     // get values
     const email = form.email.value;
     const password = form.password.value;
 
     try {
-      const res = await fetch('/auth/login', { 
-        method: 'POST', 
+      const res = await fetch("/auth/login", {
+        method: "POST",
         body: JSON.stringify({ email, password }),
-        headers: {'Content-Type': 'application/json'}
-      })
+        headers: { "Content-Type": "application/json" },
+      });
       const data = await res.json();
       console.log(data);
       if (data.errors) {
@@ -62,11 +62,9 @@
         passwordError.textContent = data.errors.password;
       }
       if (data.user) {
-        location.assign('/');
+        location.assign("/home");
       }
-
-    }
-    catch (err) {
+    } catch (err) {
       console.log(err);
     }
   });
