--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -66,7 +66,13 @@
     <div class="sidebar close">
         <ul class="nav-links">
             <li>
-                <a href="/">
+                <a href="<% if (user.type == "T") { %>
+                    /home
+                   <% } else if (user.type == "D") { %>
+                    /home
+                   <% } else {%>
+                    /mahasiswa/
+                   <% } %>">
                 <i class='bx bx-home-alt bx-sm'></i>
                 <span class="link_name">Home</span>
                 </a>
