--- a/views/dosen/referensi.ejs
+++ b/views/dosen/referensi.ejs
@@ -57,26 +57,26 @@
       })
       .catch((error) => console.log(error));
   }
-  function hapus(){
-        Swal.fire({
-        title: 'Are you sure?',
-        text: "You won't be able to revert this!",
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Yes, delete it!'
-      }).then((result) => {
-        if (result.isConfirmed) {
-          Swal.fire("Good job!", "Data deleted", "success")
+  function hapus() {
+    Swal.fire({
+      title: "Are you sure?",
+      text: "You won't be able to revert this!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, delete it!",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire("Good job!", "Data deleted", "success")
           .then(function () {
             window.setTimeout(function () {
               window.location = "./referensi";
             }, 700);
           })
           .catch((error) => console.log(error));
-        }
-      })
+      }
+    });
   }
 </script>
 <%- include('../partials/footer'); -%>
