--- a/public/css/login.css
+++ b/public/css/login.css
@@ -185,12 +185,15 @@ iframe {
 }
 
 .txt2 {
-  font-family: "Poppins";
+  font-family: "Quicksand", sans-serif;
   font-size: 14px;
   color: #828282;
   line-height: 1.5;
   text-decoration: none;
   color: #3f50e2;
+  margin: 0 auto;
+  font-weight: 600;
+  text-align: center;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -417,6 +420,7 @@ iframe {
   text-align: center;
   justify-content: center;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .login100-form-btn {
