--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,8 +6,8 @@ body {
   font-size: 1.2rem;
   letter-spacing: 1px;
   background: #fafafa;
-  background-color: #44B54F;
-  background-color: #FFAA7B;
+  background-color: #44b54f;
+  background-color: #ffaa7b;
 }
 
 h1,
@@ -95,7 +95,7 @@ button {
   letter-spacing: 2px;
 }
 .error {
-  color: #ff0099;
+  color: #3f50e2;
   margin: 10px 2px;
   font-size: 0.8em;
   font-weight: bold;
