add admin route

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
         <div class="container-login100-form-btn m-t-30 flexible">
           <button class="login100-form-btn" type="submit">LOGIN</button>
         </div>
-        <a href="/home" class="txt2 bo1">Masuk sebagai Mahasiswa</a>
+        <a href="/mahasiswa/home" class="txt2 bo1">Masuk sebagai Mahasiswa</a>
       </form>
     </div>
   </div>
