--- a/views/mahasiswa/sidebar.ejs
+++ b/views/mahasiswa/sidebar.ejs
@@ -36,7 +36,7 @@
     <div class="sidebar close">
         <ul class="nav-links">
             <li>
-                <a href="/home">                
+                <a href="/mahasiswa/home">                
                     <i class='bx bx-home-alt bx-sm'></i>
                 <span class="link_name">Home</span>
                 </a>
